--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="sort_top_rated">Top-Rated</string>
     <string name="reviews">Reviews</string>
     <string name="trailers">Trailers</string>
+    <string name="no_trailers_available">No Trailers Available</string>
 </resources>
