--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="reviews">Reviews</string>
     <string name="trailers">Trailers</string>
     <string name="no_trailers_available">No Trailers Available</string>
+    <string name="sort_favourites">Favourites</string>
 </resources>
