--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="trailers">Trailers</string>
     <string name="no_trailers_available">No Trailers Available</string>
     <string name="sort_favourites">Favourites</string>
+    <string name="no_reviews_available">No Reviews Available</string>
 </resources>
